ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ceov-ingress
spec:
  rules:
    - host: ceov.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ceov-app
                port:
                  number: 80
